--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "server": "node --env-file=.env backend/server.js --watch",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node --env-file=.env backend/seeder.js",
+    "data:destroy": "node --env-file=.env backend/seeder.js -d",
     "start": "node backend/server.js"
   },
   "author": "Pablo Gomez",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "concurrently": "^9.0.1"
   }
 }
