--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node --env-file=.env backend/seeder.js",
     "data:destroy": "node --env-file=.env backend/seeder.js -d",
-    "start": "node backend/server.js"
+    "start": "nodemon backend/server.js"
   },
   "author": "Pablo Gomez",
   "license": "MIT",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "colors": "^1.4.0",
-    "concurrently": "^9.0.1"
+    "concurrently": "^9.0.1",
+    "nodemon": "^3.1.7"
   }
 }
